force-app/main/default/objects/Account/fields/Customer_primary_contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_primary_contact__c</fullName>
    <label>Customer primary contact</label>
    <length>66</length>
    <type>Text</type>
</CustomField>