force-app/main/default/objects/Account/fields/Old_Recipient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Old_Recipient_Email_Address__c</fullName>
    <label>Old Recipient Email Address</label>
    <type>Email</type>
</CustomField>