force-app/main/default/objects/Account/fields/Recipient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email_Address__c</fullName>
    <label>Recipient Email Address</label>
    <type>Email</type>
</CustomField>