force-app/main/default/objects/Account/fields/Recipient_Email_ID_Verified__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email_ID_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient Email ID Verified</label>
    <type>Checkbox</type>
</CustomField>