force-app/main/default/objects/Account/fields/Verification_Received_on__c.field-meta.xml
<CustomField>
    <fullName>Verification_Received_on__c</fullName>
    <label>Verification Received on</label>
    <type>DateTime</type>
</CustomField>