force-app/main/default/objects/Account/fields/Verification_sent_on__c.field-meta.xml
<CustomField>
    <fullName>Verification_sent_on__c</fullName>
    <label>Verification sent on</label>
    <type>DateTime</type>
</CustomField>